[gd_scene load_steps=28 format=2]

[ext_resource path="res://scenas/Control.tscn" type="PackedScene" id=1]
[ext_resource path="res://img/envelope-foreground.png" type="Texture" id=2]
[ext_resource path="res://img/reloj.png" type="Texture" id=3]
[ext_resource path="res://fuentes/Pocket Money.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://script/Interfaz.gd" type="Script" id=5]
[ext_resource path="res://img/lleno.png" type="Texture" id=6]
[ext_resource path="res://img/gato2/7.png" type="Texture" id=7]
[ext_resource path="res://img/recc.png" type="Texture" id=8]
[ext_resource path="res://fuentes/ARIALNB.TTF" type="DynamicFontData" id=9]
[ext_resource path="res://img/paussa.png" type="Texture" id=10]
[ext_resource path="res://img/Recurso 4.png" type="Texture" id=11]
[ext_resource path="res://img/Recurso 6.png" type="Texture" id=12]
[ext_resource path="res://img/Recurso 2.png" type="Texture" id=13]
[ext_resource path="res://img/Recurso 3.png" type="Texture" id=14]
[ext_resource path="res://scenas/Cuestionario.tscn" type="PackedScene" id=15]
[ext_resource path="res://script/Pausa.gd" type="Script" id=16]
[ext_resource path="res://scenas/AnimationPlayer.gd" type="Script" id=17]
[ext_resource path="res://script/DesJos.gd" type="Script" id=18]

[sub_resource type="DynamicFont" id=1]
size = 80
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=2]
size = 50
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=3]
size = 22
font_data = ExtResource( 9 )

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("CanvasLayer/Pausa:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "fin"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("CanvasLayer/Pausa:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 1000 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "ini"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("CanvasLayer/Pausa:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 1000 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=7]
length = 0.001
tracks/0/type = "bezier"
tracks/0/path = NodePath("Cuestionario/CanvasLayer/Interfaz/Inter:rect_position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("Cuestionario/CanvasLayer/Interfaz/Inter:rect_position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}

[sub_resource type="Animation" id=9]
resource_name = "fin"
length = 0.7
tracks/0/type = "bezier"
tracks/0/path = NodePath("Cuestionario/CanvasLayer/Interfaz/Inter:rect_position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.6 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("Cuestionario/CanvasLayer/Interfaz/Inter:rect_position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 1000, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.6 )
}

[sub_resource type="Animation" id=8]
resource_name = "ini"
tracks/0/type = "bezier"
tracks/0/path = NodePath("Cuestionario/CanvasLayer/Interfaz/Inter:rect_position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("Cuestionario/CanvasLayer/Interfaz/Inter:rect_position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 1000, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1 )
}

[node name="Interfaz" type="Node"]
script = ExtResource( 5 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Barra" type="Control" parent="CanvasLayer"]
margin_left = 960.0
margin_top = 125.0
margin_right = 960.0
margin_bottom = 125.0

[node name="Sprite" type="Sprite" parent="CanvasLayer/Barra"]
position = Vector2( 1.99997, 6 )
scale = Vector2( 1.50625, 1.5814 )
texture = ExtResource( 2 )

[node name="Sprite2" type="Sprite" parent="CanvasLayer/Barra"]
position = Vector2( 45, -4 )
texture = ExtResource( 3 )

[node name="Label" type="Label" parent="CanvasLayer/Barra/Sprite2"]
modulate = Color( 0, 0, 0, 1 )
margin_left = -147.0
margin_top = -59.0
margin_right = 131.0
margin_bottom = 91.0
custom_fonts/font = SubResource( 1 )
text = "60"
align = 1

[node name="TextureProgress" type="TextureProgress" parent="CanvasLayer/Barra"]
margin_left = -945.0
margin_top = -108.0
margin_right = -350.0
margin_bottom = 56.0
value = 100.0
texture_under = ExtResource( 8 )
texture_progress = ExtResource( 6 )
nine_patch_stretch = true

[node name="Sprite4" type="Sprite" parent="CanvasLayer/Barra/TextureProgress"]
position = Vector2( 80, 77 )
scale = Vector2( 3.67487, 3.56571 )
texture = ExtResource( 7 )

[node name="Label" type="Label" parent="CanvasLayer/Barra/TextureProgress"]
margin_left = 175.0
margin_top = 21.0
margin_right = 514.0
margin_bottom = 103.0
custom_fonts/font = SubResource( 2 )
text = "VIDA"
align = 1
valign = 1

[node name="Label2" type="Label" parent="CanvasLayer/Barra/TextureProgress"]
margin_left = 244.0
margin_top = 96.0
margin_right = 447.0
margin_bottom = 145.0
custom_fonts/font = SubResource( 3 )
text = "Puntos: 0"
align = 1

[node name="TextureButton" type="TextureButton" parent="CanvasLayer/Barra"]
margin_left = 736.0
margin_top = -131.0
margin_right = 896.0
margin_bottom = 29.0
texture_normal = ExtResource( 10 )
expand = true

[node name="Jos" type="Control" parent="CanvasLayer"]
margin_right = 40.0
margin_bottom = 40.0

[node name="Control" parent="CanvasLayer/Jos" instance=ExtResource( 1 )]

[node name="Pausa" type="Control" parent="CanvasLayer"]
pause_mode = 2
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 16 )

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/Pausa"]
pause_mode = 2
margin_left = 582.0
margin_top = 135.0
margin_right = 1392.0
margin_bottom = 945.0
texture = ExtResource( 12 )
expand = true

[node name="exit" type="TextureButton" parent="CanvasLayer/Pausa"]
pause_mode = 2
margin_left = 1184.0
margin_top = 155.0
margin_right = 1333.0
margin_bottom = 305.0
texture_normal = ExtResource( 11 )
expand = true

[node name="reini" type="TextureButton" parent="CanvasLayer/Pausa"]
pause_mode = 2
margin_left = 747.0
margin_top = 794.0
margin_right = 984.0
margin_bottom = 1030.0
texture_normal = ExtResource( 13 )
expand = true

[node name="menu" type="TextureButton" parent="CanvasLayer/Pausa"]
pause_mode = 2
margin_left = 1013.0
margin_top = 794.0
margin_right = 1250.0
margin_bottom = 1030.0
texture_normal = ExtResource( 14 )
expand = true

[node name="Timer" type="Timer" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
pause_mode = 2
anims/RESET = SubResource( 4 )
anims/fin = SubResource( 5 )
anims/ini = SubResource( 6 )
script = ExtResource( 17 )

[node name="Cuestionario" parent="." instance=ExtResource( 15 )]

[node name="AnimationPlayer" type="AnimationPlayer" parent="Cuestionario"]
pause_mode = 2
root_node = NodePath("../..")
anims/RESET = SubResource( 7 )
anims/fin = SubResource( 9 )
anims/ini = SubResource( 8 )
script = ExtResource( 18 )

[connection signal="cargar" from="." to="Cuestionario" method="_on_Interfaz_cargar"]
[connection signal="pressed" from="CanvasLayer/Barra/TextureButton" to="." method="_on_TextureButton_pressed"]
[connection signal="pressed" from="CanvasLayer/Pausa/exit" to="." method="_on_exit_pressed"]
[connection signal="pressed" from="CanvasLayer/Pausa/reini" to="." method="_on_reini_pressed"]
[connection signal="pressed" from="CanvasLayer/Pausa/menu" to="." method="_on_menu_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="pressed" from="Cuestionario/CanvasLayer/Interfaz/Inter/A" to="." method="_on_A_pressed"]
[connection signal="pressed" from="Cuestionario/CanvasLayer/Interfaz/Inter/B" to="." method="_on_B_pressed"]
[connection signal="pressed" from="Cuestionario/CanvasLayer/Interfaz/Inter/C" to="." method="_on_C_pressed"]
[connection signal="pressed" from="Cuestionario/CanvasLayer/Interfaz/Inter/D" to="." method="_on_D_pressed"]
[connection signal="actA" from="Cuestionario/AnimationPlayer" to="." method="_on_AnimationPlayer_actA"]
[connection signal="actB" from="Cuestionario/AnimationPlayer" to="." method="_on_AnimationPlayer_actB"]
[connection signal="actX" from="Cuestionario/AnimationPlayer" to="." method="_on_AnimationPlayer_actX"]
[connection signal="actY" from="Cuestionario/AnimationPlayer" to="." method="_on_AnimationPlayer_actY"]
[connection signal="animation_finished" from="Cuestionario/AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]

[editable path="Cuestionario"]
